# framework-comparison-2020

./: .gitignore  readme.md
actix/: Cargo.toml  Dockerfile  _Dockerfile  build.sh  setup_diesel_cli.sh  setup_migrate.sh  up.sh
actix-sqlx/: Cargo.toml  Dockerfile  build.sh  up.sh
actix-sqlx/migrations/: V01__CREATE_FOOTBALLER_TABLE.sql
actix-sqlx/src/: api.rs  footballer.rs  footballer_repository.rs  main.rs
actix/src/: footballer.rs  footballer_repository.rs  footballer_rest_controller.rs  main.rs
aqueduct/: .gitignore  Dockerfile.native  Dockerfile.vm  README.md  build-native.sh  build-vm.sh  config.src.yaml  install-aqueduct-cli.sh  migrate.sh  pubspec.yaml  up-native.sh  up-vm.sh
aqueduct/lib/: channel.dart  config.dart  footballer.dart  footballer_controller.dart  footballer_resource.dart  footballmanager.dart
aqueduct/migrations/: V01__CREATE_FOOTBALLER_TABLE.sql
aqueduct/test/: example_test.dart
aqueduct/test/harness/: app.dart
docker/: create-pgadmin-connection.sh  docker-compose.yml  reset-db.sh  servers.json
fasthttp/: .env.docker  .env.local  1_initital_migration.tx.down.sql  1_initital_migration.tx.up.sql  Dockerfile  build.sh  footballer.go  footballer_repository.go  footballer_rest_controller.go  footballmanager.go  go.mod  go.sum  up.sh
hapi/: .docker.env  .env  Dockerfile  build.sh  install-typescript.sh  ormconfig.json  package-lock.json  package.json  up.sh
hapi/src/: Api.ts  Index.ts
hapi/src/entity/: Footballer.ts
hapi/src/migration/: 1592511865851-CreateFootballerTable.ts
lambda-rust/: Cargo.toml  Makefile  env.json  setup-aws-sam-cli.sh  setup-musl-support.sh  template.yaml  up.sh
lambda-rust/src/: api.rs  footballer.rs  main.rs  repository.rs
loadtest_jmeter/: install-monitoring-tools.sh  loadtest.jmx  run-with-monitoring-all.sh  run-with-monitoring.sh  run.sh  user.properties
loadtest_locust/: install.sh  locustfile.py  up.sh
loadtest_locust/scenarios/: browse.py  create.py
micronaut/: Dockerfile.jvm  Dockerfile.native  build-jvm.sh  build-native.sh  build.gradle  install-native-image.sh  micronaut-cli.yml  reflectconfig  up-jvm.sh  up-native.sh
micronaut/src/main/kotlin/info/novatec/: FootballerRepository.kt  FootballerRestController.kt
micronaut/src/main/resources/: application.yml
quarkus/: README.md  build-jvm.sh  build-native.sh  build.gradle  gradle.properties  settings.gradle  up-jvm.sh  up-native.sh
quarkus-vertx/: README.md  build-jvm.sh  build-native.sh  build.gradle  gradle.properties  settings.gradle  up-jvm.sh  up-native.sh
quarkus-vertx/src/main/docker/: Dockerfile.jvm  Dockerfile.native
quarkus-vertx/src/main/java/info/novatec/: Footballer.java  FootballerResource.java
quarkus-vertx/src/main/resources/: application.yml
quarkus/src/main/docker/: Dockerfile.jvm  Dockerfile.native
quarkus/src/main/resources/: application.yml
rocket/: .env  Cargo.toml  build.sh  up.sh
rocket/migrations/2020-03-03-195931_create_footballer_table/: down.sql
rocket/src/: api.rs  footballer.rs  footballer_repository.rs  main.rs  schema.rs
spring-mvc/: Dockerfile  build.gradle  up.sh
spring-mvc/src/main/resources/: application.yml
spring-r2dbc/: build.gradle  build.sh  up.sh
spring-r2dbc/src/main/resources/: application.yml
warp/: .env  Cargo.toml  Dockerfile  build.sh  down.sh  up.sh
warp/src/: api.rs  footballer.rs  main.rs  repository.rs
(+15 files in other folders)
