[package]
name = "footballmanager"
version = "0.1.0"
authors = ["Christian Schaible <christian.schaible@novatec-gmbh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-http = "1.0.1"
actix-web = "2.0.0"
anyhow = "1.0.31"
async-trait = "0.1.33"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
refinery = { version = "0.3.0", features = ["postgres"] }
url = "2.1.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
sqlx = { version = "0.3.5", features = [ "postgres" ] }


