[package]
name = "footballmanager"
version = "0.1.0"
authors = ["Christian Schaible <christian.schaible@novatec-gmbh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", default_features = false}
actix-rt = "1.1.1"

dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"

r2d2 = "0.8.8"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "numeric"] }

uuid = { version = "0.8.1", features = ["serde", "v4"] }

serde = {version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
