[package]
name = "lambda-rust"
version = "0.1.0"
authors = ["Christian Schaible <christian.schaible@novatec-gmbh.de>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
dotenv = "0.15.0"
env_logger = "0.7.1"
http = "0.1.21"
lambda_http = "0.1.1"
lambda_runtime = "0.2.1"
log = "0.4.8"
postgres = "0.17.3"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.53"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
