[package]
name = "footballmanager"
version = "0.1.0"
authors = ["Christian Schaible <christian.schaible@novatec-gmbh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

# opt-level = 3 causes 50% request fail under (high) load
[profile.release]
opt-level = 2

[dependencies]
rocket = "0.4.5"

r2d2 = "0.8.8"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "numeric"] }
diesel_migrations = "1.4.0"

dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"

serde = {version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_postgres_pool", "json"]
