[package]
name = "footballmanager-warp"
version = "0.1.0"
authors = ["Timo Freiberg <timo.freiberg@novatec-gmbh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
anyhow = "1.0"
tokio = { version = "0.2", features = ["macros"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
dotenv = "0.15"
futures = "0.3"
refinery = { version = "0.3", features = ["postgres"] }
url = "2.1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.3"
default-features = false
features = ["runtime-tokio", "macros", "postgres"]
